# temp_rep

./: pyproject.toml
alembic/: env.py
alembic/versions/: 1e320074c0be_user_model.py  e37122b9f65e_initial_migration.py
api_slug/: pyproject.toml
api_slug/api/V1/: user.py
api_slug/src/: main.py
api_slug/src/api/: __init__.py
api_slug/src/core/: config.py
api_slug/src/db/: db.py
src/: main.py
src/api/: __init__.py
src/api/V1/: user.py
src/auth/: auth.py
src/core/: config.py
src/db/: db.py
src/models/: __init__.py  base.py  shorted_url.py  user_model.py
src/schemas/: schemas.py
src/services/: shorted_url.py
